--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -4,6 +4,7 @@
 	"welcome_to": "Bienvenido a",
 	"pay_go_charge": "Pay Go Charge",
 	"welcome_remaining_message": "la forma simple de cargar tu vehículo eléctrico. Simplemente añade créditos para iniciar el cargador",
+	"buy_energy": "Comprar Energía",
 
 	"status": "Estado",
 	"credits": "Créditos",
