--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -4,6 +4,7 @@
 	"welcome_to": "Bienvenue à",
 	"pay_go_charge": "Pay Go Charge",
 	"welcome_remaining_message": "la manière simple de charger votre véhicule électrique. Ajoutez simplement des crédits pour démarrer le chargeur",
+	"buy_energy": "Acheter de l'Énergie",
 
 	"status": "Statut",
 	"credits": "Crédits",
