--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -4,6 +4,8 @@
 	"welcome_to": "Välkommen till",
 	"pay_go_charge": "Pay Go Charge",
 	"welcome_remaining_message": "det enkla sättet att ladda vår elbil. lägg bara till krediter för att starta laddaren",
+	"buy_energy": "Köp Energi",
+
 	"status": "Status",
 	"credits": "Krediter",
 	"remaining_energy": "Återstående Energi",
